V. 11
- New text feature - mark for qurrently tracked quest. It displays direction for all time and inherits size of default POI mark, changes color depends on whether it exists in current zone (green) or you need to teleport (red). It rely on ESO API, so it can only display what game itself can display and it also sometimes can lead to weird results because of API nuances, more testing needed.

V. 10
- Added customization - you can change font size for distance label and reticle over label with POI name, size of marker itself, transparency of marker on the distance and when you are close to it, max distance of marker on which it is visible and color

V. 9
- Unused UI element properly hidden
- Two more POIs (WGT and ICP)

V. 8
- Added UI to see all discovered and undiscovered POIs
- Command `/impcartgetclose` to get coordinates of the closest marker with id

V.7
- Fixes due to LibImplex update
- Added new points

V.6
- Bugfix

V. 5
- Refactoring, including waypoint fix
- Added support of default map filters

V. 4
- Added 99% of default POIs
- Some functionality disabled until refactored

V. 2
- Waypoints
- Fix for sublocations
- New locations
- List of all added POIs (but hidden for now)

V. 1
- Initial