@@ -1,5 +1,36 @@
 ImperialCartographer.DefaultPOIsData =
 {
+    -- U48 v
+    [2918] = {410402.95892672, 50656, 308253.43504339},
+    [2823] = {489098.97713008, 44063, 354731.56899348},
+    [2824] = {422199.23020492, 43226, 213897.81413742},
+    [2825] = {532098.0639396, 44324, 103697.98865799},
+    [2826] = {395922.34011362, 43463, 185854.02884471},
+    [2827] = {485418.99537465, 42897, 204455.30206651},  -- wrong height, can't access location
+    [2828] = {574090.55647635, 43628, 100114.63299597},
+    [2830] = {572668.59270443, 50300, 331013.98493376},  -- wrong height, can't access location
+    [2831] = {513475.41064185, 45529, 317798.89434879},
+    [2832] = {462299.46559972, 42067, 174199.73503591},
+    [2833] = {434105.5552409, 46538, 270739.33775857},
+    [2834] = {507251.33705781, 45201, 397442.66774212},
+    [2836] = {477596.97913457, 44070, 293210.51005822},  -- probably there is better position for it?
+    [2841] = {555797.89963912, 43387, 145607.87033692},
+    [2842] = {581420.23563229, 48974, 201375.49175409},
+    [2874] = {560946.56959976, 43050, 240639.56698809},
+    [2877] = {501346.29988205, 42782, 298301.81347076},
+    [2878] = {574335.30350788, 46434, 156260.61675917},
+    [2879] = {551248.81870253, 43868, 296340.39773997},
+    [2880] = {427754.9878207, 43111, 201389.3917147},
+    [2881] = {434570.36858479, 52908, 304258.33212247},
+    [2882] = {471570.92814877, 42660, 374679.36703497},
+    [2888] = {510312.48789294, 42033, 170427.17736136},
+    [2889] = {528258.58458164, 47156, 353001.0968361},
+    [2890] = {454106.16728874, 42125, 192647.96281438},
+    [2891] = {526030.76854664, 42186, 116812.9245043},
+    [2892] = {539614.80564153, 42350, 232198.60230374},
+    [2893] = {460646.51666639, 42270, 413812.69511327},
+    [2894] = {377104.38362908, 46001, 302355.35040899},
+    -- U48 ^
     [1694] = {52360.00120752, 50233, 28620.00029940},
     [1695] = {56910.00129891, 13459, 47639.9995960},
     -- U47 v
